Bug 152581 - conditional border color not exported to xlsx
Summary: conditional border color not exported to xlsx
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Attila Szűcs
URL:
Whiteboard: target:7.6.0 target:7.5.0.0.beta2
Keywords:
Depends on:
Blocks: XLSX-Conditional-Formatting
  Show dependency treegraph
 
Reported: 2022-12-18 18:25 UTC by Attila Szűcs
Modified: 2023-11-27 10:50 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
document with conditional formatted colored border (9.75 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2022-12-18 18:27 UTC, Attila Szűcs
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Attila Szűcs 2022-12-18 18:25:00 UTC
Description:
conditional border color turns to black, when exported to xlsx.

Repro:
-load conditionalFormat.xlsx
-check border color of cell "test" - it orange
-save as xlsx
-close, and reopen the new, saved document
-check border color of cell "test" - it is black

expected result: border color should not change.

Steps to Reproduce:
1. load conditionalFormat.xlsx
2. check border color of cell "test" - it orange
3. save as xlsx
4. close, and reopen the new, saved document - it is black

Actual Results:
border color changed to black

Expected Results:
border color should not change. (remain orange)


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0517ef1669dba0e055b8ef3cf09a4b40378e476f
CPU threads: 6; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL threaded
Comment 1 Attila Szűcs 2022-12-18 18:27:28 UTC
Created attachment 184225 [details]
document with conditional formatted colored border
Comment 2 Commit Notification 2022-12-20 12:58:01 UTC
Attila Szűcs committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b66e35c721742d2ad1c8c2cc3251661b6ce81952

tdf#152581 SC: fix export of conditional border color

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2022-12-20 14:46:15 UTC
Attila Szűcs committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/3e9e457f931502b9a64fd8b58b37ad1fe4c9ebbe

tdf#152581 SC: fix export of conditional border color

It will be available in 7.5.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Gabor Kelemen (Collabora) 2023-11-27 10:50:15 UTC
This seems to be fixed in current master.