tdf#152581 SC: fix export of conditional border color

Call XclExpDxf::mpBorder->SetFinalColors(..) during export, before SaveXml().
It will calculate the prepered colors from mnLeftColorId to mnLeftColor,
so saveXml() will be able to save it.

Change-Id: I1a1eccccd621c6d0e883cb9016e60ae0b344bf90
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144411
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Andras Timar <andras.timar@collabora.com>