sc/source/filter/excel/xeroot.cxx
@@ -277,6 +277,7 @@ void XclExpRoot::InitializeSave()
 {
     GetPalette().Finalize();
     GetXFBuffer().Finalize();
+    GetDxfs().Finalize();
 }
 
 XclExpRecordRef XclExpRoot::CreateRecord( sal_uInt16 nRecId ) const
