sc/source/filter/inc/xestyle.hxx
@@ -734,6 +734,8 @@ public:
     virtual void SaveXml( XclExpXmlStream& rStrm ) override;
     void SaveXmlExt( XclExpXmlStream& rStrm);
 
+    void SetFinalColors();
+
 private:
     std::unique_ptr<XclExpCellAlign> mpAlign;
     std::unique_ptr<XclExpCellBorder> mpBorder;
@@ -754,6 +756,8 @@ public:
     void AddColor(Color aColor);
 
     virtual void SaveXml( XclExpXmlStream& rStrm) override;
+    void Finalize();
+
 private:
     typedef std::vector< std::unique_ptr<XclExpDxf> > DxfContainer;
     std::map<OUString, sal_Int32> maStyleNameToDxfId;
