sc/qa/unit/subsequent_export_test2.cxx
@@ -205,6 +205,7 @@ public:
     void testTdf144642_RowHeightRounding();
     void testTdf145129_DefaultRowHeightRounding();
     void testTdf151755_stylesLostOnXLSXExport();
+    void testTdf152581_bordercolorNotExportedToXLSX();
     void testTdf140431();
     void testCheckboxFormControlXlsxExport();
     void testButtonFormControlXlsxExport();
@@ -324,6 +325,7 @@ public:
     CPPUNIT_TEST(testTdf144642_RowHeightRounding);
     CPPUNIT_TEST(testTdf145129_DefaultRowHeightRounding);
     CPPUNIT_TEST(testTdf151755_stylesLostOnXLSXExport);
+    CPPUNIT_TEST(testTdf152581_bordercolorNotExportedToXLSX);
     CPPUNIT_TEST(testTdf140431);
     CPPUNIT_TEST(testCheckboxFormControlXlsxExport);
     CPPUNIT_TEST(testButtonFormControlXlsxExport);
@@ -2625,6 +2627,20 @@ void ScExportTest2::testTdf151755_stylesLostOnXLSXExport()
     assertXPath(pSheet, "/x:worksheet/x:sheetData/x:row[4]/x:c[2]", "s", aCellStyleId);
     assertXPath(pSheet, "/x:worksheet/x:sheetData/x:row[4]/x:c[3]", "s", aCellStyleId);
     assertXPath(pSheet, "/x:worksheet/x:sheetData/x:row[4]/x:c[4]", "s", aCellStyleId);
+    pShell->DoClose();
+}
+
+void ScExportTest2::testTdf152581_bordercolorNotExportedToXLSX()
+{
+    ScDocShellRef pShell = loadDoc(u"tdf152581_bordercolorNotExportedToXLSX.", FORMAT_XLSX);
+
+    // Resave the xlsx file without any modification.
+    std::shared_ptr<utl::TempFile> pXPathFile = ScBootstrapFixture::exportTo(*pShell, FORMAT_XLSX);
+    xmlDocUniquePtr pStyles = XPathHelper::parseExport(pXPathFile, m_xSFactory, "xl/styles.xml");
+    CPPUNIT_ASSERT(pStyles);
+
+    // Check if conditional format border color is exported
+    assertXPath(pStyles, "/x:styleSheet/x:dxfs/x:dxf/x:border/x:left/x:color", "rgb", "FFED7D31");
     pShell->DoClose();
 }
 
